pod-security/mutate/set-privilege-escalation/.kyverno-test/patched-resource-02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        allowPrivilegeEscalation: false
