pod-security/mutate/set-privilege-escalation/.kyverno-test/patched-resource-03.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
    - name: container02
      image: dummyimagename
      securityContext:
        allowPrivilegeEscalation: false
