pod-security/mutate/set-privilege-escalation/.kyverno-test/patched-resource-04.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        allowPrivilegeEscalation: false
    - name: container02
      image: dummyimagename
      securityContext:
        allowPrivilegeEscalation: false
